# LOB-Engine

./: CMakeLists.txt  README.md  debug_search.py  scan.py
include/LOB/: CSVParser.h  Limit.h  MemoryMappedFile.h  Order.h  OrderBook.h  SlabAllocator.h  Types.h
pybind/: PyBindings.cpp
src/: benchmarks.cpp  main.cpp
tests/: test_orderbook.cpp
